# mpbt-launcher

./: .env.production.example  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: release.yml  version-bump.yml
native/: build.bat  ddraw.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  game.rs  lib.rs
src/app/: page.tsx
